--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,3 +29,11 @@
   width: 100%;
   height: 90%;
 }
+
+.post-it-tag {
+  display: inline-block;
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 3px;
+  margin: 3px;
+}
